Bytte til Set i InntektsmeldingAggregat for å gjøre equals/hashcode robust mot endring i rekkefølge (#10464)